Changing the folders and archives for API_KEY security

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY = 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
+OPENAI_API_KEY=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
+
