--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cyber",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "got": "^12.5.3",
     "openai": "^3.1.0"
   }
